--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Chemotaxis</title>
+		<title>UCHUSEN</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Chemotaxis</h1>
+			<h1>SPACESHIP</h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Max
+		    Use the LEFT and RIGHT arrow keys to turn, UP to accelerate, and 'h' to initiate hyperspace.
 	    </footer>
 	</body>
 </html>
